src/objects/ActivitySchedule__c.object
<CustomObject>
    <fields>
        <fullName>Activity__c</fullName>
        <label>Activity</label>
        <referenceTo>Activity__c</referenceTo>
        <relationshipName>EventSchedules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capacity__c</fullName>
        <label>Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>EndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EndTime__c</fullName>
        <label>EndTime</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ActivitySchedule_ID__c</fullName>
        <externalId>true</externalId>
        <label>External_ActivitySchedule_ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FridayAvailability__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Friday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MondayAvailability__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Monday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SaturdayAvailability__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Saturday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>StartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StartTime__c</fullName>
        <label>StartTime</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SundayAvailability__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sunday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ThursdayAvailability__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Thursday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TuesdayAvailability__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tuesday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WednesdayAvailability__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wednesday</label>
        <type>Checkbox</type>
    </fields>
    <label>ActivitySchedule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <columns>StartTime__c</columns>
        <columns>EndTime__c</columns>
        <columns>Activity__c</columns>
        <columns>FridayAvailability__c</columns>
        <columns>MondayAvailability__c</columns>
        <columns>SaturdayAvailability__c</columns>
        <columns>SundayAvailability__c</columns>
        <columns>ThursdayAvailability__c</columns>
        <columns>TuesdayAvailability__c</columns>
        <columns>WednesdayAvailability__c</columns>
        <columns>External_ActivitySchedule_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AS-{0000}</displayFormat>
        <label>ActivitySchedule ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ActivitySchedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>